# radio-chatter-scanner

./: .CMakeLists.txt  .gitignore  CMakeLists.txt  Makefile  README.md  db_schema.sql
assets/: db_schema.sql
include/: db.h  input.h  radio.h  silero.h  silero.hpp  vad.h  wav.h
src/: db.c  input.c  main.c  main.cc  radio.c  silero.cc  vad.cc
test/: input.cc
